# SphericImageProjector

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
src/: app.hpp  camera.cpp  camera.hpp  main.cpp  math.cpp  math.hpp  mesh.cpp  mesh.hpp  pipeline.cpp  pipeline.hpp  shader.cpp  shader.hpp  sipImage.cpp  sipImage.hpp  sipManager.cpp  sipManager.hpp  texture.cpp  texture.hpp  vertex.hpp
src/Core/: camera.cpp  imguiUi.cpp  line.cpp  lineRenderer.cpp  main.cpp  maintmp.cpp  math.cpp  mesh.cpp  pipeline.cpp  shader.cpp  texture.cpp
src/Res/: SIPCamera.frag  SIPImage.frag  SIPImage.vert  default.frag  default.vert  defaultSIPImage.frag  defaultSIPImage.vert  line.frag  line.vert
src/SIP/: sipCamera.cpp  sipImage.cpp  sipManager.cpp
src/includes/Core/: app.hpp  camera.hpp  imguiUi.hpp  line.hpp  lineRenderer.hpp  math.hpp  mesh.hpp  pipeline.hpp  shader.hpp  texture.hpp
src/includes/SIP/: sipCamera.hpp  sipImage.hpp  sipManager.hpp
